[tool.poetry]
name = "myasyncio"
version = "0.1.0"
description = ""
authors = ["iplitharas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
aiohttp = "^3.8.4"
pre-commit = "^3.2.2"
isort = "^5.12.0"
pylint = "^2.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
